--- a/platforms/browser/www/app/views/home.html
+++ b/platforms/browser/www/app/views/home.html
@@ -8,6 +8,10 @@
 
 <div class="container-fluid" ng-init="sLoadHome()">
 
-	<div class="row" ng-init="">Prueba</div>
+	<div class="row" ng-init="">RUTAS DE ESCALADA EN ECUADOR</div>
 
+<H2>Pichincha</H2>	
+	
+	
+	
 </div>
