--- a/www/app/views/region.html
+++ b/www/app/views/region.html
@@ -22,7 +22,7 @@
 			<p class="subtitle">Pichincha</p>
 
 			<div class="btnMainContainer">
-				<button type="button" class="btn btn-primary btnMain" href="home.html">Continuar</button>
+				<button type="button" class="btn btn-primary btnMain" onclick="window.location.href='home.html'">>Continuar</button>
 			</div>
 		</div>
 
