--- a/platforms/browser/www/app/views/region.html
+++ b/platforms/browser/www/app/views/region.html
@@ -22,7 +22,9 @@
 			<p class="subtitle">Pichincha</p>
 
 			<div class="btnMainContainer">
-				<button type="button" class="btn btn-primary btnMain" onclick="window.location.href='home.html'">>Continuar</button>
+			<form action="home.html" method="_post">
+				<button type="button" class="btn btn-primary btnMain">Continuar</button>
+				</form>
 			</div>
 		</div>
 
