--- a/www/app/views/region.html
+++ b/www/app/views/region.html
@@ -22,8 +22,8 @@
 			<p class="subtitle">Pichincha</p>
 
 			<div class="btnMainContainer">
-			<form action="home.html" method="_post">
-				<button type="button" class="btn btn-primary btnMain">Continuar</button>
+			<form action="/home.html" method="_post">
+				<button type="button" class="btn btn-primary btnMain" type="submit">Continuar</button>
 				</form>
 			</div>
 		</div>
