--- a/platforms/browser/www/app/views/home.html
+++ b/platforms/browser/www/app/views/home.html
@@ -17,11 +17,12 @@
 -->
 <html>
 	<head>
-		<title>Future Imperfect by HTML5 UP</title>
+		<title>ESCALA ECUADOR</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="main.css" />
+		<link rel="stylesheet" href="font-awesome.min.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
@@ -29,9 +30,9 @@
 
 	<div class="container-fluid" ng-init="sLoadHome()">
 
-	<div class="row" ng-init="">RUTAS DE ESCALADA EN ECUADOR</div>
+	
 
-<H2>Pichincha</H2>	
+<H2 style="text-align:center;">Pichincha</H2>	
 	
 	
 	
@@ -142,7 +143,7 @@
 								
 								
 								
-								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="pic01.jpg" alt="" /></a>
 								
 								
 								</div>
@@ -671,11 +672,11 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
+			<script src="jquery.min.js"></script>
+			<script src="skel.min.js"></script>
+			<script src="util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+			<script src="main.js"></script>
 
 	</body>
 </html>
