--- a/www/app/views/region.html
+++ b/www/app/views/region.html
@@ -22,9 +22,9 @@
 			<p class="subtitle">Pichincha</p>
 
 			<div class="btnMainContainer">
-			<form action="/home.html" method="_post">
-				<button type="button" class="btn btn-primary btnMain" type="submit">Continuar</button>
-				</form>
+			
+				<a href="app/views/home.html" class="btn btn-primary btnMain" >Continuar</a>
+				
 			</div>
 		</div>
 
